--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,10 @@
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
 
+# Test reports
+test-results
+test-results.meta
+
+# Externals
 /Assets/External/LunarAssert
 /Assets/External/LunarAssert.meta
